Login and buttons for selecting bank info

--- a/templates/web_interface/welcome.html
+++ b/templates/web_interface/welcome.html
@@ -1,1 +1,8 @@
 Welcome
+
+{% if user.is_authenticated %}
+  <li>User: {{ user.get_username }}</li>
+  <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+{% else %}
+  <li><a href="{% url 'login'%}?next={{'/account'}}">Login</a></li>   
+{% endif %} 
