Before migration wackness

--- a/templates/web_interface/show_account.html
+++ b/templates/web_interface/show_account.html
@@ -1,4 +1,5 @@
 {{user}}
+  <li><a href="{% url 'get_transactions'%}">Get transaction data</a></li>   
     <div id="container">
         <p>
             Click the button below to open a list of Institutions - after you select one,
@@ -11,11 +12,6 @@
     </div>
 
     <div id="app">
-        <div class="box">
-            <button id="get-accounts-btn">Get Accounts</button>
-            <div id="get-accounts-data"></div>
-        </div>
-
         <div class="box">
             <button id="get-item-btn">Get Item</button>
             <div id="get-item-data"></div>
